<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBlue"
    tools:context=".tela.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/customborder"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/activity_login_nome" />

        <EditText
            android:id="@+id/activity_login_edit_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/identity_black"
            android:inputType="textEmailAddress"
            android:shadowColor="@color/loginBlue" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_login_senha" />
        <!--

                    <EditText
                        android:id="@+id/activity_login_edit_senha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/outline_black"
                        android:inputType="textPassword"
                        android:shadowColor="@color/loginBlue" />

        -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/etPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_login_edit_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawableStart="@drawable/outline_black"
                android:shadowColor="@color/loginBlue"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/activity_login_button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/customborderbuttonlogin"
            android:text="@string/activity_login_login"
            android:textColor="@color/buttonTextLogin"
            android:textSize="@dimen/sizeTextButtonSave" />

    </LinearLayout>

</RelativeLayout>
